--- a/Mobile/BookAway/app/src/main/res/layout/content_search.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/content_search.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,58 +10,233 @@
     <LinearLayout
         android:id="@+id/search_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <SearchView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </SearchView>
 
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/search_book_image"
-                    android:layout_width="40dp"
-                    android:layout_height="match_parent"
+                    android:id="@+id/search_book_image1"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:layout_weight="2"
                     android:padding="10dp"
                     android:src="@drawable/book_placeholder" />
 
                 <TextView
-                    android:id="@+id/search_book_title"
+                    android:id="@+id/search_book_title1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@id/search_book_image"
+                    android:layout_toRightOf="@id/search_book_image1"
+                    android:textSize="40sp"
                     android:text="Título" />
 
                 <TextView
-                    android:id="@+id/search_book_colection"
+                    android:id="@+id/search_book_colection1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/search_book_title"
-                    android:layout_toLeftOf="@id/search_book_image"
+                    android:layout_below="@id/search_book_title1"
+                    android:layout_toRightOf="@id/search_book_image1"
+                    android:textSize="35sp"
                     android:text="Coleção" />
 
                 <TextView
-                    android:id="@+id/search_book_author"
+                    android:id="@+id/search_book_author1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/search_book_colection"
-                    android:layout_toLeftOf="@id/search_book_image"
+                    android:layout_below="@id/search_book_colection1"
+                    android:layout_toRightOf="@id/search_book_image1"
+                    android:textSize="30sp"
                     android:text="Autor" />
 
                 <LinearLayout
-                    android:id="@+id/search_minitags_group"
+                    android:id="@+id/search_minitags_group1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/search_book_author"
-                    android:layout_toLeftOf="@id/search_book_image"
+                    android:layout_below="@id/search_book_author1"
+                    android:layout_toRightOf="@id/search_book_image1"
                     android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/tag_sell_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/tag_sell"
+                        android:padding="5dp"
+                        android:text="V"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/tag_exchange_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/tag_exchange"
+                        android:padding="5dp"
+                        android:text="T"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/tag_borrow_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/tag_borrow"
+                        android:padding="5dp"
+                        android:text="E"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/tag_give_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/tag_give_away"
+                        android:padding="5dp"
+                        android:text="D"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"/>
+
                 </LinearLayout>
-            </LinearLayout>
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/search_book_image2"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_weight="2"
+                    android:padding="10dp"
+                    android:src="@drawable/book_placeholder" />
+
+                <TextView
+                    android:id="@+id/search_book_title2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/search_book_image2"
+                    android:textSize="40sp"
+                    android:text="Título" />
+
+                <TextView
+                    android:id="@+id/search_book_colection2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/search_book_title2"
+                    android:layout_toRightOf="@id/search_book_image2"
+                    android:textSize="35sp"
+                    android:text="Coleção" />
+
+                <TextView
+                    android:id="@+id/search_book_author2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/search_book_colection2"
+                    android:layout_toRightOf="@id/search_book_image2"
+                    android:textSize="30sp"
+                    android:text="Autor" />
+
+                <LinearLayout
+                    android:id="@+id/search_minitags_group2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/search_book_author2"
+                    android:layout_toRightOf="@id/search_book_image2"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tag_sell_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/tag_sell"
+                        android:padding="5dp"
+                        android:text="V"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/tag_exchange_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/tag_exchange"
+                        android:padding="5dp"
+                        android:text="T"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/tag_borrow_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/tag_borrow"
+                        android:padding="5dp"
+                        android:text="E"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/tag_give_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/tag_give_away"
+                        android:padding="5dp"
+                        android:text="D"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"/>
+
+                </LinearLayout>
+            </RelativeLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
 </RelativeLayout>
