--- a/Mobile/BookAway/app/src/main/res/layout/content_book.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/content_book.xml
@@ -32,7 +32,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imagemLivro1"
+                        android:id="@+id/capa"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"
