--- a/Mobile/BookAway/app/src/main/res/layout/content_my_bookshelf.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/content_my_bookshelf.xml
@@ -13,4 +13,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical" />
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary" />
+
+    </android.support.design.widget.AppBarLayout>
+
 </RelativeLayout>
