--- a/Mobile/Ionic/BookAway/www/templates/novoLivro.html
+++ b/Mobile/Ionic/BookAway/www/templates/novoLivro.html
@@ -3,17 +3,17 @@
         <form id="novoLivro-form12" class="list ">
             <label class="item item-input " id="novoLivro-input13">
                 <span class="input-label">Título</span>
-                <input type="text" name="input" ng-model="titulo.text"
+                <input type="text" name="input" ng-model="titulo"
            ng-pattern="example.word" required ng-trim="false">
             </label>
             <label class="item item-input " id="novoLivro-input14">
                 <span class="input-label">Coleção</span>
-                <input type="text" name="input" ng-model="colecao.text"
+                <input type="text" name="input" ng-model="colecao"
            ng-pattern="example.word" required ng-trim="false">
             </label>
             <label class="item item-input " id="novoLivro-input15">
                 <span class="input-label">Autor</span>
-                <input type="text" name="input" ng-model="autor.text"
+                <input type="text" name="input" ng-model="autor"
            ng-pattern="example.word" required ng-trim="false">
             </label>
             <ion-checkbox>Troca</ion-checkbox>
